# fuel-vrf

./: .gitignore  Cargo.toml  Forc.toml  README.md
abi/: Forc.toml
abi/src/: lib.sw  randomness.sw
js/: jest.config.js  package-lock.json  package.json  tsconfig.json
js/lib/: index.d.ts  index.js
js/lib/contracts/: index.d.ts  index.js
js/lib/contracts/factories/: VrfImplAbi__factory.d.ts  VrfImplAbi__factory.js
js/src/: index.ts  vrf.ts
js/src/contracts/: VrfImpl.ts  VrfImplAbi.d.ts  VrfImplAbi.hex.ts  VrfImplAbi.ts  VrfImplFactory.ts  common.d.ts  common.ts  index.ts
js/src/contracts/factories/: VrfImplAbi__factory.ts
js/test/: api.test.ts
rust/examples/call/: Cargo.toml  Forc.toml  README.md  build.rs
rust/examples/call/src/: abi.rs  error.sw  main.rs  main.sw  utils.rs
rust/examples/off-chain/: Cargo.toml  README.md
rust/examples/off-chain/src/: main.rs
rust/sdk/: Cargo.toml  abi.json  build.rs
rust/sdk/abi/: proxy.json  vrf.json
rust/sdk/src/: abi.rs  error.rs  lib.rs
src/: randomness.sw
