[workspace]
members = ["rust/sdk", "rust/examples/off-chain", "rust/examples/call"]
resolver = "2"

[workspace.package]
version = "0.2.10"
authors = ["ORAO Network Developers <hello@orao.network>"]
repository = "https://github.com/orao-network/fuel-vrf"
rust-version = "1.81"
edition = "2021"
keywords = [
    "vrf",
    "ed25519",
    "fuel",
    "fuel-nft",
    "randomizer",
    "on-chain",
    "random",
    "number",
    "generator",
    "sway",
]
description = "ORAO Verifiable Random Function for Fuel Network."

[workspace.dependencies]
fuels = { version = "0.70.4", features = ["fuel-core-lib"] }
