[package]
name = "orao-fuel-vrf"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
fuels.workspace = true
thiserror = "1"
tokio = { version = "1.15", features = ["rt", "macros"] }

[dev-dependencies]
tokio-test = "0.4.2"
