[package]
name = "off-chain"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
eth-keystore = "0.4"
fuels.workspace = true
fuel-crypto.workspace = true
indicatif = "0.17"
orao-fuel-vrf = { path = "../../sdk" }
rand = "0.8"
rpassword = "7.0.0"
shellexpand = "2.1.2"
tokio = { version = "1.15", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio-test = "0.4.2"
